GC의 종류와 선택 추가